2004-02-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/encode.c, src/munge/read.c, src/munged/base64.c,
	  src/munged/base64.h, src/munged/cipher.c, src/munged/cipher.h,
	  src/munged/mac.c, src/munged/mac.h, src/munged/md.c, src/munged/md.h:
	  Pedantic tweaks for AIX compiler.

2004-01-30  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/auth.c: Added support for getpeereid().

	* src/libmunge/ctx.c, src/libmunge/msg_client.c, src/munged/dec_v1.c,
	  src/munged/enc_v1.c, src/munged/munged.c:
	  Tweaked includes for FreeBSD 4.8.

	* Makefile.in, aclocal.m4, configure, configure.ac,
	  config/ac_check_peercred.m4, config/config.h.in, src/Makefile.in,
	  src/etc/Makefile.in, src/libcommon/Makefile.in,
	  src/libmissing/Makefile.in, src/libmunge/Makefile.in,
	  src/munge/Makefile.in, src/munged/Makefile.in: Added checks
	  for HAVE_GETPEEREID, HAVE_SO_PEERCRED, and HAVE_STRUCT_STRRECVFD.

	* config/ac_debug.m4:
	  Replaced obsolete AC_HELP_STRING with AS_HELP_STRING.

2004-01-29  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/msg_client.c, src/munge/munge.c, src/munge/unmunge.c,
	  src/munged/conf.c, src/munged/sock.c:
	  Tweaked for compiler warnings under AIX 5.1.

	* src/libcommon/munge_msg.h, src/munged/conf.h, src/munged/cred.h:
	  Replaced <stdint.h> with <inttypes.h> based on info from the
	  autoconf doc (section 5.6.1: Portability of Headers).

2004-01-28  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.59, automake-1.8.2, libtool-1.5.2.

2004-01-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/str.c, src/libcommon/str.h: Added memburn().

2004-01-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/license.c: Updated copyright date range.

	* src/libcommon/munge_defs.h, src/libcommon/munge_msg.c
	  src/libcommon/munge_msg.h, src/libmunge/ctx.c,
	  src/libmunge/ctx.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/libmunge/msg_client.c,
	  src/libmunge/munge.h, src/munge/unmunge.c, src/munged/cred.c,