@@ -1,3 +1,8 @@
+2004-02-13  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/str.c, src/libcommon/str.h:
+	  Removed strdump().  Added strhex().
+
 2004-02-05  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libmunge/encode.c, src/munge/read.c, src/munged/base64.c,
